--- a/assets/sass/_breakpoints.scss
+++ b/assets/sass/_breakpoints.scss
@@ -33,7 +33,7 @@
                     padding: 0 6px;
 
                     svg {
-                        max-width: 56px;
+                        max-width: $smallPanelsplit - 10px;
                     }
                 }
             } 
