--- a/assets/sass/_style.scss
+++ b/assets/sass/_style.scss
@@ -19,6 +19,7 @@ html, body {
         .play-thing{
             max-width: 900px;
             border-radius: 9px;
+            margin-bottom:20px;
 
             h1{
                 margin-bottom:5px;
